// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Combobox > snapshot > matches closed snapshot 1`] = `
<DocumentFragment>
  <div
    class="_combobox_53f94f"
  >
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      class="form-input _trigger_53f94f"
      type="button"
    >
      <span
        class="_placeholder_53f94f"
      >
        Select…
      </span>
      <span
        aria-hidden="true"
        class="_chevron_53f94f"
      >
        ▾
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Combobox > snapshot > matches open flat snapshot 1`] = `
<DocumentFragment>
  <div
    class="_combobox_53f94f"
  >
    <button
      aria-expanded="true"
      aria-haspopup="listbox"
      class="form-input _trigger_53f94f"
      type="button"
    >
      <span
        class="_placeholder_53f94f"
      >
        Select…
      </span>
      <span
        aria-hidden="true"
        class="_chevron_53f94f"
      >
        ▾
      </span>
    </button>
    <div
      class="_dropdown_53f94f"
      role="listbox"
    >
      <ul
        class="_list_53f94f"
      >
        <li
          aria-selected="false"
          class="_option_53f94f"
          role="option"
        >
          Engineering
        </li>
        <li
          aria-selected="false"
          class="_option_53f94f"
          role="option"
        >
          Product
        </li>
        <li
          aria-selected="false"
          class="_option_53f94f"
          role="option"
        >
          Design
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Combobox > snapshot > matches open grouped searchable snapshot 1`] = `
<DocumentFragment>
  <div
    class="_combobox_53f94f"
  >
    <button
      aria-expanded="true"
      aria-haspopup="listbox"
      class="form-input _trigger_53f94f"
      type="button"
    >
      <span
        class="_placeholder_53f94f"
      >
        Select…
      </span>
      <span
        aria-hidden="true"
        class="_chevron_53f94f"
      >
        ▾
      </span>
    </button>
    <div
      class="_dropdown_53f94f"
      role="listbox"
    >
      <div
        class="_searchWrap_53f94f"
      >
        <input
          class="_search_53f94f"
          placeholder="Search…"
          type="text"
          value=""
        />
      </div>
      <ul
        class="_list_53f94f"
      >
        <li>
          <span
            class="_groupLabel_53f94f"
          >
            Engineering
          </span>
          <ul>
            <li
              aria-selected="false"
              class="_option_53f94f"
              role="option"
            >
              Software Engineer
            </li>
            <li
              aria-selected="false"
              class="_option_53f94f"
              role="option"
            >
              Backend Developer
            </li>
          </ul>
        </li>
        <li>
          <span
            class="_groupLabel_53f94f"
          >
            Product
          </span>
          <ul>
            <li
              aria-selected="false"
              class="_option_53f94f"
              role="option"
            >
              Product Manager
            </li>
            <li
              aria-selected="false"
              class="_option_53f94f"
              role="option"
            >
              Business Analyst
            </li>
          </ul>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;
